# porous-media-flow-model

./: 404.html  README.md  gen.toml  index.html  mkdocs.yml  porouspy_schema.md  test_82_140722_Re21300_m4_hill_70_5Hz.py
.github/workflows/: docs.yml  generate_api.yml
PorousPy/: __init__.py
PorousPy/core/: __init__.py  author.py  calibration.py  camera.py  device.py  flowparameters.py  freeflow.py  hardware.py  laser.py  measurement.py  metadata.py  model.py  porousmedia.py  porousmediadocument.py  porousmediaparameters.py  processstep.py  recording.py  root.py  seeding.py  seedingparameters.py  software.py  triggering.py  video.py
PorousPy/schemes/: Dataset EXC2075 PN1-3.md  Dataset EXC2075 PN1-3_metadata.json  porouspy_schema.md
diagrams/: v1.md
docs/: index.md
docs/versions/: v1.md
porous-media-go/: go.mod
porous-media-go/src/: v1.go
porous-media-jl/src/: PorousMedia.jl  Project.toml  V1.jl
porous-media-py/: pyproject.toml
porous-media-py/porousmedia/: __init__.py
porous-media-py/porousmedia/versions/: v1.py
porous-media-rs/: Cargo.toml
porous-media-rs/src/: lib.rs
porous-media-rs/src/versions/: v1.rs
porous-media-ts/src/: v1.ts
schemes/v1/: porous-media-v1-linkml.yaml  porous-media-v1.graphql  porous-media-v1.json  porous-media-v1.proto  porous-media-v1.xsd
search/: search_index.json
specifications/: model.md  v1.md
versions/v1/: index.html
