[project]
name = "porousmedia"
version = "0.1.0"
description = ""
authors = [
    {name = "Jan Range",email = "30547301+JR-1991@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.11.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
